[package]
name = "locker-derive"
description = "Asset management in Git for humans"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/adamschlesinger/locker-cli/"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["git", "lfs", "binaries", "assets"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.36"
syn = "2.0.58"